--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<ntap-notification-list></ntap-notification-list>
+<div class="viewport">
+  <div class="main-content">
+    <ntap-header></ntap-header>
+    <ntap-notification-list></ntap-notification-list>
+  </div>
+  <ntap-footer></ntap-footer>
+</div>
