--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -1,18 +1,14 @@
-<ntap-header></ntap-header>
-
 <ul class="list-group">
   <li
     class="list-group-item"
     *ngFor="let notificacao of notificacoes"
     [ngClass]="{ lido: notificacao.lido }"
   >
-    <div class="titulo">{{ notificacao.aplicativo }}</div>
+    <div class="titulo fw-bold">{{ notificacao.aplicativo }}</div>
     <div class="subtitulo">{{ notificacao.mensagem }}</div>
-    <div class="data">{{ notificacao.data }}</div>
+    <div class="data fw-lighter">{{ notificacao.data }}</div>
     <button (click)="marcarLido(notificacao)" class="btn btn-primary">
       Marcar como lido
     </button>
   </li>
 </ul>
-
-<ntap-footer></ntap-footer>
